--- a/index.html
+++ b/index.html
@@ -168,6 +168,49 @@
 
         </section>
         <!-- latest news -->
+        <section class="my-24">
+            <h3 class="text-5xl mb-12 font-semibold text-center">
+                Latest News
+            </h3>
+            <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <!-- first card -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img class="p-4 md:p-0 lg:p-0" src="/images/others/latest1.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum deleniti quas, neque dolorum
+                            ea facilis porro laudantium?</p>
+                        <div class="card-actions justify-center">
+                            <button class="btn uppercase text-white bg-bike-primary">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- second card -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img class="p-4 md:p-0 lg:p-0" src="/images/others/latest2.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum deleniti quas, neque dolorum
+                            ea facilis porro laudantium?</p>
+                        <div class="card-actions justify-center">
+                            <button class="btn uppercase text-white bg-bike-primary">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- third card -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img class="p-4 md:p-0 lg:p-0" src="/images/others/latest3.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum deleniti quas, neque dolorum
+                            ea facilis porro laudantium?</p>
+                        <div class="card-actions justify-center">
+                            <button class="btn uppercase text-white bg-bike-primary">Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
