--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike1.png" class="w-[400px]" />
+                        <img src="images/slider/bike1.png" class="w-[400px]" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -108,7 +108,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike2.png" class="w-[400px]" />
+                        <img src="images/slider/bike2.png" class="w-[400px]" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -130,7 +130,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike3.png" class="w-[400px]" />
+                        <img src="images/slider/bike3.png" class="w-[400px]" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -152,7 +152,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike4.png" class="w-[400px]" />
+                        <img src="images/slider/bike4.png" class="w-[400px]" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -187,7 +187,7 @@
                 </div>
                 <!-- second card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img class="p-4 md:p-0 lg:p-0" src="/images/others/latest2.png" alt="Shoes" /></figure>
+                    <figure><img class="p-4 md:p-0 lg:p-0" src="images/others/latest2.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum deleniti quas, neque dolorum
@@ -199,7 +199,7 @@
                 </div>
                 <!-- third card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img class="p-4 md:p-0 lg:p-0" src="/images/others/latest3.png" alt="Shoes" /></figure>
+                    <figure><img class="p-4 md:p-0 lg:p-0" src="images/others/latest3.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum deleniti quas, neque dolorum
@@ -219,7 +219,7 @@
             <div class="grid gap-10 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                 <!-- first review -->
                 <div class="card card-compact bg-base-100 p-9 border border-gray-200">
-                    <figure><img class="w-36" src="/images/others/user-1.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="images/others/user-1.png" alt="Shoes" /></figure>
                     <div class="card-body text-center">
                         <p>Slate helps you see how many more days you need to work to reach your financial goal for the
                             month and year.</p>
@@ -238,7 +238,7 @@
                 </div>
                 <!-- second review -->
                 <div class="card card-compact bg-base-100 p-9 border border-gray-200">
-                    <figure><img class="w-36" src="/images/others/user-2.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="images/others/user-2.png" alt="Shoes" /></figure>
                     <div class="card-body text-center">
                         <p>Slate helps you see how many more days you need to work to reach your financial goal for the
                             month and year.</p>
@@ -257,7 +257,7 @@
                 </div>
                 <!-- third review -->
                 <div class="card card-compact bg-base-100 p-9 border border-gray-200">
-                    <figure><img class="w-36" src="/images/others/user-3.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="images/others/user-3.png" alt="Shoes" /></figure>
                     <div class="card-body text-center">
                         <p>Slate helps you see how many more days you need to work to reach your financial goal for the
                             month and year.</p>
@@ -283,7 +283,7 @@
             </h3>
             <div class="hero">
                 <div class="hero-content flex-col lg:gap-24 lg:flex-row">
-                    <img src="/images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
+                    <img src="images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
                     <div>
                         <!-- first question -->
                         <div class="collapse collapse-arrow">
